; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_namespace.c_flags_to_propagation_type.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_namespace.c_flags_to_propagation_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MS_REC = common dso_local global i32 0, align 4
@MS_SILENT = common dso_local global i32 0, align 4
@MS_SHARED = common dso_local global i32 0, align 4
@MS_PRIVATE = common dso_local global i32 0, align 4
@MS_SLAVE = common dso_local global i32 0, align 4
@MS_UNBINDABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @flags_to_propagation_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @flags_to_propagation_type(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @MS_REC, align 4
  %7 = load i32, i32* @MS_SILENT, align 4
  %8 = or i32 %6, %7
  %9 = xor i32 %8, -1
  %10 = and i32 %5, %9
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @MS_SHARED, align 4
  %13 = load i32, i32* @MS_PRIVATE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* @MS_SLAVE, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @MS_UNBINDABLE, align 4
  %18 = or i32 %16, %17
  %19 = xor i32 %18, -1
  %20 = and i32 %11, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %30

23:                                               ; preds = %1
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @is_power_of_2(i32 %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %30

28:                                               ; preds = %23
  %29 = load i32, i32* %4, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %28, %27, %22
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @is_power_of_2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
